# gloria_backend

./: .env.example  .gitignore  CORS_FIX.md  DEPLOYMENT.md  EMAIL_FIREWALL_FIX.md  EMAIL_SETUP.md  FIX_GMAIL_SMTP.md  FRONTEND_BRANCH_IMPORT_PROMPT.md  FRONTEND_CORS_FIX_PROMPT.md  IMPLEMENTATION_SUMMARY.md  MIGRATION_FIX_SUMMARY.md  NGINX_CORS_CONFIG.md  OPEN_SMTP_PORTS.sh  OTP_EMAIL_FIX.md  QUICK_EMAIL_FIX.md  QUICK_FIX.md  START_SERVER.md  TESTING.md  ecosystem.config.cjs  env.example  package-lock.json  package.json  start.sh  temp_migration.sql  tsconfig.json
docs/: SKELETON_AGENT.md
prisma/: MIGRATE_SHADOW_DB.md  schema.prisma
proto/: carhire.proto
protos/: agent_ingress.proto  agent_tester.proto  health.proto  middleware_public.proto  source_provider.proto
scripts/: activate-companies.js  activate-specific-company.js  add-isMock-column-manual.sql  add-isMock-column.js  add-isMock-column.sql  apply-migration-safely.js  check-agent-agreements.js  check-agreements.js  check-availability-job.js  check-companies.js  check-db-connection.js  check-env.js  check-existing-agreement.js  check-prisma-env.js  check-windows-ports.js  create-active-source.js  load-test.ts  (+32 more)
sdks/python-agent/: .gitignore  README.md  pyproject.toml
sdks/python-agent/carhire/: __init__.py  client.py  config.py  dto.py  exceptions.py
sdks/python-agent/carhire/clients/: __init__.py  availability.py  booking.py  locations.py
sdks/python-agent/carhire/transport/: __init__.py  grpc.py  interface.py  rest.py
sdks/python-agent/examples/: quickstart.py  test-availability.py  test-booking.py
(+275 files in other folders)
